@@ -353,6 +353,7 @@
                         <!-- time-consuming tests excluded by default -->
                         <exclude>**/StressTestVersioningProvider.java</exclude>
                         <exclude>**/StressTestSpeed.java</exclude>
+                        <!--exclude>**/*Test.java</exclude-->
                     </excludes>
                     <includes>
                         <include>**/*Test.java</include>
@@ -479,6 +480,60 @@
                     </webResources>
                 </configuration>
             </plugin>
+            <!-- Below plugin for Selenium tests (mvn integration-test, not yet working) -->
+            <!--plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.0.0.M3</version>
+                <configuration>
+                        <scanIntervalSeconds>10</scanIntervalSeconds>
+                        <contextPath>/</contextPath>
+                        <scanIntervalSeconds>10</scanIntervalSeconds>
+                        <stopKey>STOP</stopKey>
+                        <stopPort>8005</stopPort>
+                        <port>8080</port>
+                </configuration>
+                <executions>
+                        <execution>
+                            <id>start-jetty</id>
+                            <phase>pre-integration-test</phase>
+                            <goals>
+                                <goal>stop</goal>
+                                <goal>run-exploded</goal>
+                            </goals>
+                            <configuration>
+                                <scanIntervalSeconds>0</scanIntervalSeconds>
+                                <daemon>true</daemon>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>stop-jetty</id>
+                            <phase>post-integration-test</phase>
+                            <goals>
+                                <goal>stop</goal>
+                            </goals>
+                        </execution>
+                    </executions>        
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>selenium-maven-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <browser>*firefox</browser>
+                    <suite>tests/build/webtests/test-custom/selenium/TestSuite.html</suite>
+                    <startURL>http://localhost:8080/JSPWiki</startURL>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>Run-Selenese-Scripts</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                           <goal>selenese</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin-->
         </plugins>
         <pluginManagement>
         	<plugins>
